fix carousel overflow

--- a/static/HomePage/css/homepage-teams.css
+++ b/static/HomePage/css/homepage-teams.css
@@ -65,7 +65,6 @@
   .homepage-teams-container .carousel-inner {
     height: 100%;
     text-align: center;
-    overflow: visible
   }
   .homepage-teams-responsive-team-container-inner{
     height: 100%;
